--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -13,6 +13,17 @@
 
 
     <h1>Editing Book</h1>
+    <% if @book.errors.any? %>
+    <h3><%= @book.errors.count %>errors prohibited this book from being saved:</h3>
+    <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li>
+         <%= message %>
+        </li>
+        <% end %>
+
+    </ul>
+      <% end %>
     <!-- form_with部分 -->
     <%= form_with model:@book, local: true do |f| %>
       <h4>Title</h4>
